--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^1.1.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0"
